fixed bugs
-Pop ups work now
-Close upon clicking anything else
-Profile page no longer messed up
-Contact seller bug fixed

--- a/css/newcss.css
+++ b/css/newcss.css
@@ -362,3 +362,13 @@ button:hover {
   color: white;
   text-align: center;
 }
+#popup {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border: 1px solid black;
+    background-color: white;
+    z-index: 1000;
+}
